--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://sergeyakhmad.github.io/Weather-app",
+  "homepage": "https://olenapustova.github.io/weather",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Weather-app/"
+    "build": "parcel build src/*.html --public-url /weather/"
   },
   "repository": {
     "type": "git",
